# sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sentinel.yaml
.github/workflows/: ci.yml
docs/: methodology.md
sentinel/: __init__.py  arp.py  certs.py  config.py  credstore.py  dnsmon.py  fileless.py  finding.py  lsass.py  memory.py  network.py  persistence.py  pipes.py  process.py  proctree.py  scanner.py  tls_fingerprint.py
tests/: conftest.py  test_scanner.py
