[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-edr"
version = "0.2.0"
description = "Host-based threat detection and endpoint security framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Zanden Kane"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=5.9",
    "requests>=2.28",
    "pyyaml>=6.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
sentinel = "sentinel.scanner:main"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff.lint.per-file-ignores]
"sentinel/lsass.py" = ["E701", "E702"]
"sentinel/persistence.py" = ["E701", "E702"]
"sentinel/tls_fingerprint.py" = ["E701", "E702"]
"sentinel/fileless.py" = ["E701", "E702", "F841"]
"tests/test_scanner.py" = ["E402"]
